[package]
name = "hashtags"
version = "0.1.0"
authors = ["MissionL <mission@byzantine-lab.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "^0.21.0", features = ["chrono"] }
sha3 = "^0.8"
chrono = { version = "^0.4.11", features = ["serde"] }
regex = "1"
clap = "^2.33.0"
dirs = "^2.0.2"
serde = { version = "^1.0.50", features = ["derive"] }
serde_json = { version = "1" }
base64 = "^0.12.0"
